admission-controller/opa-policies/08-deny-host-namespaces-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyHostNamespaces
metadata:
  name: deny-host-namespaces
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
